# soccer-sdk-utils

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  README.md  README.rst  format_dates.py  ingestion_lambda.template  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  test_format_dates.py
.github/workflows/: ci.yml  lint.yml  test.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
soccer_sdk_utils/: anchor.py  division.py  tools.py
soccer_sdk_utils/api/: ncaa.py  tgs.py
soccer_sdk_utils/model/: meta.py  player.py  team.py  tgs.py
src/soccer_sdk_utils/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
tests/unit/: test_anchor.py  test_gender.py  test_page.py  test_tools.py
