[tool.poetry]
name = "soccer-sdk-utils"
version = "0.1.0"
description = "A utility library for Soccer SDK packages."
authors = ["Omar Crosby <omar.crosby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
invoke = "^1.7.3"
flake8 = "^6.0.0"
python-semantic-release = "^7.32.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
ignore = ['C901', 'W503']
max-line-length = 88
exclude = ['.env', '.venv', '.env', 'env', 'migrations', '__pycache__', 'manage.py', 'settings.py']


[tool.pytest.ini_options]
