[tool.poetry]
name = "soccer-sdk-utils"
version = "0.0.0"
description = "A utility library for Soccer SDK packages."
authors = ["Omar Crosby <omar.crosby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
invoke = "^1.7.3"
flake8 = "^6.0.0"
python-semantic-release = "^7.32.2"
Flake8-pyproject = "^1.1.0.post0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
ignore = ['C901', 'W503']
max-line-length = 88
exclude = ['.env', '.venv', '.env', 'env', 'migrations', '__pycache__', 'manage.py', 'settings.py']


[tool.pytest.ini_options]
addopts = "--cov=soccer_sdk_utils --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=100"

[tool.semantic_release]
version_source = "commit"
version_variable = [
    "soccer_sdk_utils/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}"
]
major_on_zero = true
branch = "main"
upload_to_pypi = true
upload_to_release = true
commit_subject = "chore: release {version} [skip ci] ***NO_CI***"
build_command = "poetry build"